[project]
name = "scalyca"
version = "0.0.8"
authors = [
    { name = "Martin Baláž", email = "martin.balaz@trojsten.sk" }
]
requires-python = ">=3.11.0"
dependencies = [
    'dotmap>=1.3.0',
    'pathlib>=1.0.0',
    'schema>=0.7.0',
    'colorama>=0.4.0',
    'pyyaml>=6.0.0',
]
description = "Simple Console Application with Logging, Yaml Configuration and Argparse"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sesquideus/scalyca"
